--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,6 @@
         <import type="android.text.InputType"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
-
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MainActivity">
@@ -17,39 +16,33 @@
                 android:id="@+id/id_card_number_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-
-
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp"
-
-
                 android:hint="@{mainViewModel.accountTypeFull.view.prompt}"
 
+                app:errorText='@{mainViewModel.accountType != null ? "" : mainViewModel.accountTypeFull.validator.message}'
+
                 android:theme="@style/TextInputLayoutAppearance"
-                android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="16dp"
                 app:layout_constraintTop_toTopOf="parent">
 
             <AutoCompleteTextView
                     android:id="@+id/id_card_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
                     android:imeOptions="actionNext|flagNoExtractUi"
                     android:singleLine="true"
                     android:inputType="textNoSuggestions|textVisiblePassword"
                     android:cursorVisible="false"
                     android:text="@{mainViewModel.accountTypeFull.view.title}"
-
+                    android:focusable="false"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-
                     android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                     android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
-                    android:drawableTint="@color/cardview_dark_background"
-
-
-            />
+                    android:drawableTint="@color/cardview_dark_background"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -58,25 +51,22 @@
                 android:layout_height="wrap_content"
                 android:hint="@{mainViewModel.mfoFull.view.prompt}"
                 android:visibility='@{mainViewModel.mfoFull.name.equals("")? View.GONE : View.VISIBLE}'
-
+                app:errorText='@{mainViewModel.accountType != null ? "" : mainViewModel.accountTypeFull.validator.message}'
+                app:hintAnimationEnabled="false"
                 android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/id_card_number_layout"
-                >
+                app:layout_constraintTop_toBottomOf="@+id/id_card_number_layout">
             <com.google.android.material.textfield.TextInputEditText
                     app:customInput='@{mainViewModel.mfoFull.view.widget.keyboard}'
-
                     android:ems="10"
                     android:id="@android:id/input"
                     android:hint="@{mainViewModel.mfoFull.view.title}"
-
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorHint="@drawable/hint_selector"
-            />
+                    android:textColorHint="@drawable/hint_selector"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -85,7 +75,6 @@
                 android:layout_height="wrap_content"
                 android:hint="@{mainViewModel.accountOrCardNumberFull.view.prompt}"
                 android:visibility='@{mainViewModel.accountOrCardNumberFull.name.equals("")? View.GONE : View.VISIBLE}'
-
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/bik_layout"
                 android:layout_marginStart="16dp"
@@ -93,102 +82,105 @@
                 android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent">
             <com.google.android.material.textfield.TextInputEditText
-
                     android:ems="10"
                     android:id="@+id/et_account_or_card_number"
                     android:hint="@{mainViewModel.accountOrCardNumberFull.view.title}"
-
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorHint="@drawable/hint_selector"
-            />
+                    android:textColorHint="@drawable/hint_selector"/>
         </com.google.android.material.textfield.TextInputLayout>
-
 
         <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/payment_type_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-
                 android:visibility='@{mainViewModel.urgentFull.name.equals("")? View.GONE : View.VISIBLE}'
                 android:hint="@{mainViewModel.urgentFull.view.title}"
                 app:hintAnimationEnabled="false"
-
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/account_or_card_number"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-
                 android:theme="@style/TextInputLayoutAppearance"
                 android:layout_marginEnd="16dp">
-
             <AutoCompleteTextView
                     android:id="@+id/payment_type"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
                     android:imeOptions="actionNext|flagNoExtractUi"
                     android:singleLine="true"
                     android:inputType="textNoSuggestions|textVisiblePassword"
                     android:cursorVisible="false"
-
+                    android:focusable="false"
                     android:text="@{mainViewModel.urgentFull.view.prompt}"
-
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-
                     android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                     android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
-                    android:drawableTint="@color/cardview_dark_background"
-            />
+                    android:drawableTint="@color/cardview_dark_background"/>
         </com.google.android.material.textfield.TextInputLayout>
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/l_name_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
+                android:hint="@{mainViewModel.lNameFull.view.prompt}"
+                android:visibility='@{mainViewModel.lNameFull.name.equals("")? View.GONE : View.VISIBLE}'
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/payment_type_layout">
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:ems="10"
                 android:id="@+id/et_first_name"
-                android:hint="Фамилия владельца счета"
-                android:visibility='@{mainViewModel.lNameFull.name.equals("")? View.GONE : View.VISIBLE}'
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/payment_type_layout"
+                android:hint="@{mainViewModel.lNameFull.view.title}"
+                android:textColorHint="@drawable/hint_selector"/>
+        </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/f_name_layout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="@{mainViewModel.fNameFull.view.prompt}"
+                android:visibility='@{mainViewModel.fNameFull.name.equals("")? View.GONE : View.VISIBLE}'
                 android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-        <EditText
-                android:layout_width="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/l_name_layout">
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
                 android:ems="10"
                 android:id="@+id/et_last_name"
-                android:hint="Имя владельца счета"
-                android:visibility='@{mainViewModel.fNameFull.name.equals("")? View.GONE : View.VISIBLE}'
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/et_first_name"
-                android:layout_marginStart="16dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-        <EditText
+                android:hint="@{mainViewModel.fNameFull.view.title}"
+                android:textColorHint="@drawable/hint_selector"/>
+        </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/m_name_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/et_father_name"
-                android:hint="Отчество владельца счета"
+                android:hint="@{mainViewModel.mNameFull.view.prompt}"
                 android:visibility='@{mainViewModel.mNameFull.name.equals("")? View.GONE : View.VISIBLE}'
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/et_last_name"
                 android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/f_name_layout">
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:id="@+id/et_middle_name"
+                android:hint="@{mainViewModel.mNameFull.view.title}"
+                android:visibility='@{mainViewModel.mNameFull.name.equals("")? View.GONE : View.VISIBLE}'
+                />
+        </com.google.android.material.textfield.TextInputLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
