--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@{mainViewModel.mfoFull.view.prompt}"
                 android:visibility='@{mainViewModel.mfoFull.name.equals("")? View.GONE : View.VISIBLE}'
-                app:errorText='@{mainViewModel.accountType != null ? "" : mainViewModel.accountTypeFull.validator.message}'
+                app:errorText='@{mainViewModel.mfoFull.isCorrect ? "" : mainViewModel.mfoFull.validator.message}'
                 app:hintAnimationEnabled="false"
                 android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -64,6 +64,7 @@
                     android:ems="10"
                     android:id="@android:id/input"
                     android:hint="@{mainViewModel.mfoFull.view.title}"
+                    android:onTextChanged = "@{(text, start, before, count) -> mainViewModel.onFormFieldTextChanged(text, mainViewModel.mfoFull)}"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColorHint="@drawable/hint_selector"/>
@@ -75,6 +76,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@{mainViewModel.accountOrCardNumberFull.view.prompt}"
                 android:visibility='@{mainViewModel.accountOrCardNumberFull.name.equals("")? View.GONE : View.VISIBLE}'
+                app:errorText='@{mainViewModel.accountOrCardNumberFull.isCorrect ? "" : mainViewModel.accountOrCardNumberFull.validator.message}'
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/bik_layout"
                 android:layout_marginStart="16dp"
@@ -85,6 +87,7 @@
                     android:ems="10"
                     android:id="@+id/et_account_or_card_number"
                     android:hint="@{mainViewModel.accountOrCardNumberFull.view.title}"
+                    android:onTextChanged = "@{(text, start, before, count) -> mainViewModel.onFormFieldTextChanged(text, mainViewModel.accountOrCardNumberFull)}"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColorHint="@drawable/hint_selector"/>
@@ -96,6 +99,7 @@
                 android:layout_height="wrap_content"
                 android:visibility='@{mainViewModel.urgentFull.name.equals("")? View.GONE : View.VISIBLE}'
                 android:hint="@{mainViewModel.urgentFull.view.title}"
+                app:errorText='@{mainViewModel.urgentType != null ? "" : mainViewModel.urgentFull.validator.message}'
                 app:hintAnimationEnabled="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -114,6 +118,7 @@
                     android:cursorVisible="false"
                     android:focusable="false"
                     android:text="@{mainViewModel.urgentFull.view.prompt}"
+                    android:onTextChanged = "@{(text, start, before, count) -> mainViewModel.onFormFieldTextChanged(text, mainViewModel.accountOrCardNumberFull)}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
@@ -127,6 +132,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@{mainViewModel.lNameFull.view.prompt}"
                 android:visibility='@{mainViewModel.lNameFull.name.equals("")? View.GONE : View.VISIBLE}'
+                app:errorText='@{mainViewModel.lNameFull.isCorrect ? "" : mainViewModel.lNameFull.validator.message}'
                 android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginEnd="16dp"
@@ -139,6 +145,7 @@
                 android:ems="10"
                 android:id="@+id/et_first_name"
                 android:hint="@{mainViewModel.lNameFull.view.title}"
+                android:onTextChanged = "@{(text, start, before, count) -> mainViewModel.onFormFieldTextChanged(text, mainViewModel.lNameFull)}"
                 android:textColorHint="@drawable/hint_selector"/>
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -147,6 +154,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@{mainViewModel.fNameFull.view.prompt}"
                 android:visibility='@{mainViewModel.fNameFull.name.equals("")? View.GONE : View.VISIBLE}'
+                app:errorText='@{mainViewModel.fNameFull.isCorrect ? "" : mainViewModel.fNameFull.validator.message}'
                 android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginEnd="16dp"
@@ -159,6 +167,7 @@
                 android:ems="10"
                 android:id="@+id/et_last_name"
                 android:hint="@{mainViewModel.fNameFull.view.title}"
+                android:onTextChanged = "@{(text, start, before, count) -> mainViewModel.onFormFieldTextChanged(text, mainViewModel.fNameFull)}"
                 android:textColorHint="@drawable/hint_selector"/>
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -167,6 +176,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@{mainViewModel.mNameFull.view.prompt}"
                 android:visibility='@{mainViewModel.mNameFull.name.equals("")? View.GONE : View.VISIBLE}'
+                app:errorText='@{mainViewModel.mNameFull.isCorrect ? "" : mainViewModel.mNameFull.validator.message}'
                 android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginEnd="16dp"
@@ -179,7 +189,7 @@
                 android:ems="10"
                 android:id="@+id/et_middle_name"
                 android:hint="@{mainViewModel.mNameFull.view.title}"
-                android:visibility='@{mainViewModel.mNameFull.name.equals("")? View.GONE : View.VISIBLE}'
+                android:onTextChanged = "@{(text, start, before, count) -> mainViewModel.onFormFieldTextChanged(text, mainViewModel.mNameFull)}"
                 />
         </com.google.android.material.textfield.TextInputLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
