--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".MainActivity">
+            tools:context=".view.MainActivity">
 
         <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/id_card_number_layout"
@@ -60,11 +60,10 @@
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/id_card_number_layout">
             <com.google.android.material.textfield.TextInputEditText
-                    app:customInput='@{mainViewModel.mfoFull.view.widget.keyboard}'
+                    android:inputType="number"
                     android:ems="10"
                     android:id="@+id/et_mfo_number"
                     android:hint="@{mainViewModel.mfoFull.view.title}"
-                    android:onTextChanged = "@{(text, start, before, count) -> mainViewModel.onFormFieldTextChanged(text, mainViewModel.mfoFull)}"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColorHint="@drawable/hint_selector"/>
@@ -77,7 +76,7 @@
                 android:hint="@{mainViewModel.accountOrCardNumberFull.view.prompt}"
                 android:visibility='@{mainViewModel.accountOrCardNumberFull.name.equals("")? View.GONE : View.VISIBLE}'
                 app:errorText='@{mainViewModel.accountOrCardNumberFull.isCorrect ? "" : mainViewModel.accountOrCardNumberFull.validator.message}'
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/bik_layout"
                 android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +86,6 @@
                     android:ems="10"
                     android:id="@+id/et_account_or_card_number"
                     android:hint="@{mainViewModel.accountOrCardNumberFull.view.title}"
-
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColorHint="@drawable/hint_selector"/>
@@ -105,7 +103,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/account_or_card_number"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:theme="@style/TextInputLayoutAppearance"
                 android:layout_marginEnd="16dp">
             <AutoCompleteTextView
@@ -126,28 +124,6 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/l_name_layout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:hint="@{mainViewModel.lNameFull.view.prompt}"
-                android:visibility='@{mainViewModel.lNameFull.name.equals("")? View.GONE : View.VISIBLE}'
-                app:errorText='@{mainViewModel.lNameFull.isCorrect ? "" : mainViewModel.lNameFull.validator.message}'
-                android:layout_marginStart="16dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/payment_type_layout">
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:id="@+id/et_first_name"
-                android:hint="@{mainViewModel.lNameFull.view.title}"
-                android:onTextChanged = "@{(text, start, before, count) -> mainViewModel.onFormFieldTextChanged(text, mainViewModel.lNameFull)}"
-                android:textColorHint="@drawable/hint_selector"/>
-        </com.google.android.material.textfield.TextInputLayout>
-        <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/f_name_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -159,15 +135,35 @@
                 android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/l_name_layout">
+                app:layout_constraintTop_toBottomOf="@+id/payment_type_layout">
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:id="@+id/et_first_name"
+                android:hint="@{mainViewModel.fNameFull.view.title}"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/l_name_layout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="@{mainViewModel.lNameFull.view.prompt}"
+                android:visibility='@{mainViewModel.lNameFull.name.equals("")? View.GONE : View.VISIBLE}'
+                app:errorText='@{mainViewModel.lNameFull.isCorrect ? "" : mainViewModel.lNameFull.validator.message}'
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/f_name_layout">
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:id="@+id/et_last_name"
-                android:hint="@{mainViewModel.fNameFull.view.title}"
-                android:onTextChanged = "@{(text, start, before, count) -> mainViewModel.onFormFieldTextChanged(text, mainViewModel.fNameFull)}"
-                android:textColorHint="@drawable/hint_selector"/>
+                android:hint="@{mainViewModel.lNameFull.view.title}"
+                />
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/m_name_layout"
@@ -181,14 +177,13 @@
                 android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/f_name_layout">
+                app:layout_constraintTop_toBottomOf="@+id/l_name_layout">
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:id="@+id/et_middle_name"
                 android:hint="@{mainViewModel.mNameFull.view.title}"
-                android:onTextChanged = "@{(text, start, before, count) -> mainViewModel.onFormFieldTextChanged(text, mainViewModel.mNameFull)}"
                 />
         </com.google.android.material.textfield.TextInputLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
